jerry-core/parser/js/new-parser/tests/js/strict-mode/variable-name-interface-strict-mode.js.expected

--- Script parsing start ---


--- Script parsing end ---

Parse error 'Identifier name is reserved in strict mode.' at line: 5 col: 1
