jerry-core/parser/js/new-parser/tests/js/strict-mode/variable-name-interface-strict-mode.js
/* This test contains strict mode parser tests. */

'use strict'

interface
